src/grammar.output
Nonterminals useless in grammar

    cast


Terminals unused in grammar

    TYPE_NAME
    TYPEDEF
    THIS
    BOOL
    TRUE
    FALSE


Rules useless in parser due to conflicts

  141 class_name: IDENTIFIER


State 0 conflicts: 19 shift/reduce
State 22 conflicts: 19 shift/reduce, 4 reduce/reduce
State 23 conflicts: 19 shift/reduce, 4 reduce/reduce
State 29 conflicts: 19 shift/reduce, 4 reduce/reduce
State 30 conflicts: 19 shift/reduce
State 35 conflicts: 27 reduce/reduce
State 55 conflicts: 23 shift/reduce
State 59 conflicts: 20 shift/reduce
State 69 conflicts: 19 shift/reduce
State 130 conflicts: 23 shift/reduce
State 149 conflicts: 19 shift/reduce, 6 reduce/reduce
State 152 conflicts: 20 shift/reduce
State 156 conflicts: 19 shift/reduce, 6 reduce/reduce
State 258 conflicts: 19 shift/reduce
State 271 conflicts: 19 shift/reduce
State 293 conflicts: 21 shift/reduce
State 342 conflicts: 32 shift/reduce
State 355 conflicts: 19 shift/reduce
State 366 conflicts: 19 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | CONST_CHAR
    5                   | CONST_FLOAT
    6                   | CONST_EXP
    7                   | '(' expression ')'
    8                   | NULL_TOKEN

    9 m: ε

   10 class_name: IDENTIFIER

   11 postfix_expression: primary_expression
   12                   | postfix_expression '[' expression ']'
   13                   | postfix_expression '(' ')'
   14                   | postfix_expression '(' argument_expression_list ')'
   15                   | postfix_expression '.' IDENTIFIER
   16                   | postfix_expression PTR_OP IDENTIFIER
   17                   | postfix_expression INC_OP
   18                   | postfix_expression DEC_OP

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list ',' assignment_expression

   21 unary_expression: postfix_expression
   22                 | INC_OP unary_expression
   23                 | DEC_OP unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF '(' type_name ')'

   27 unary_operator: '&'
   28               | '*'
   29               | '+'
   30               | '-'
   31               | '~'
   32               | '!'

   33 cast_expression: unary_expression
   34                | '(' type_name ')' cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression '*' cast_expression
   37                          | multiplicative_expression '/' cast_expression
   38                          | multiplicative_expression '%' cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression '+' multiplicative_expression
   41                    | additive_expression '-' multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFT_OP additive_expression
   44                 | shift_expression RIGHT_OP additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression '<' shift_expression
   47                      | relational_expression '>' shift_expression
   48                      | relational_expression LE_OP shift_expression
   49                      | relational_expression GE_OP shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ_OP relational_expression
   52                    | equality_expression NE_OP relational_expression

   53 and_expression: equality_expression
   54               | and_expression '&' equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression '^' and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression '|' exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression AND_OP m inclusive_or_expression

   61 logical_or_expression: logical_and_expression
   62                      | logical_or_expression OR_OP m logical_and_expression

   63 conditional_expression: logical_or_expression
   64                       | logical_or_expression '?' expression ':' conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: '='
   68                    | MUL_ASSIGN
   69                    | DIV_ASSIGN
   70                    | MOD_ASSIGN
   71                    | ADD_ASSIGN
   72                    | SUB_ASSIGN
   73                    | LEFT_ASSIGN
   74                    | RIGHT_ASSIGN
   75                    | AND_ASSIGN
   76                    | XOR_ASSIGN
   77                    | OR_ASSIGN

   78 expression: assignment_expression
   79           | expression ',' assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers ';'
   82            | declaration_specifiers init_declarator_list ';'

   83 declaration_specifiers: storage_class_specifier
   84                       | storage_class_specifier declaration_specifiers
   85                       | type_specifier
   86                       | type_specifier declaration_specifiers
   87                       | type_qualifier
   88                       | type_qualifier declaration_specifiers

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list ',' init_declarator

   91 init_declarator: declarator
   92                | declarator '=' initializer

   93 storage_class_specifier: ε
   94                        | EXTERN
   95                        | STATIC
   96                        | AUTO
   97                        | REGISTER

   98 type_specifier: VOID
   99               | CHAR
  100               | SHORT
  101               | INT
  102               | LONG
  103               | FLOAT
  104               | DOUBLE
  105               | SIGNED
  106               | UNSIGNED
  107               | struct_or_union_specifier
  108               | class_specifier
  109               | enum_specifier

  110 struct_or_union_specifier: struct struct_id '{' struct_declaration_list '}'
  111                          | struct IDENTIFIER
  112                          | union union_id '{' struct_declaration_list '}'
  113                          | union IDENTIFIER

  114 struct_id: IDENTIFIER

  115 union_id: IDENTIFIER

  116 struct: STRUCT

  117 union: UNION

  118 struct_declaration_list: struct_declaration
  119                        | struct_declaration_list struct_declaration

  120 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  121 specifier_qualifier_list: type_specifier specifier_qualifier_list
  122                         | type_specifier
  123                         | type_qualifier specifier_qualifier_list
  124                         | type_qualifier

  125 struct_declarator_list: struct_declarator
  126                       | struct_declarator_list ',' struct_declarator

  127 struct_declarator: declarator

  128 class_specifier: CLASS class_name class_body
  129                | CLASS class_name inheritance_specifier class_body
  130                | CLASS class_name

  131 inheritance_specifier: ':' base_class_list

  132 base_class_list: base_class
  133                | base_class_list ',' base_class

  134 base_class: access_specifier IDENTIFIER
  135           | IDENTIFIER

  136 access_specifier: PUBLIC
  137                 | PRIVATE
  138                 | PROTECTED

  139 class_body: '{' class_member_declaration_list '}'
  140           | '{' '}'

  141 class_name: IDENTIFIER

  142 class_member_declaration_list: class_member_declaration
  143                              | class_member_declaration_list class_member_declaration

  144 constructor_declaration: class_name '(' parameter_list ')' compound_statement
  145                        | class_name '(' ')' compound_statement

  146 class_member_declaration: access_specifier ':'
  147                         | member_declaration
  148                         | constructor_declaration

  149 member_declaration: function_definition
  150                   | specifier_qualifier_list declarator ';'

  151 enum_specifier: ENUM IDENTIFIER '{' enumerator_list '}'
  152               | ENUM IDENTIFIER

  153 enumerator_list: enumerator
  154                | enumerator_list ',' enumerator

  155 enumerator: IDENTIFIER
  156           | IDENTIFIER '=' constant_expression

  157 type_qualifier: CONST
  158               | VOLATILE

  159 declarator: pointer direct_declarator
  160           | direct_declarator

  161 direct_declarator: IDENTIFIER
  162                  | '(' declarator ')'
  163                  | direct_declarator '[' constant_expression ']'
  164                  | direct_declarator '[' ']'
  165                  | direct_declarator '(' parameter_type_list ')'
  166                  | direct_declarator '(' ')'

  167 pointer: '*'
  168        | '*' type_qualifier_list
  169        | '*' pointer
  170        | '*' type_qualifier_list pointer

  171 type_qualifier_list: type_qualifier
  172                    | type_qualifier_list type_qualifier

  173 parameter_type_list: parameter_list
  174                    | parameter_list ',' ELLIPSIS

  175 parameter_list: parameter_declaration
  176               | parameter_list ',' parameter_declaration

  177 parameter_declaration: declaration_specifiers declarator

  178 type_name: specifier_qualifier_list
  179          | specifier_qualifier_list abstract_declarator

  180 abstract_declarator: pointer
  181                    | direct_abstract_declarator
  182                    | pointer direct_abstract_declarator

  183 direct_abstract_declarator: '(' abstract_declarator ')'
  184                           | '[' ']'
  185                           | '[' constant_expression ']'
  186                           | direct_abstract_declarator '[' ']'
  187                           | direct_abstract_declarator '[' constant_expression ']'
  188                           | '(' ')'
  189                           | '(' parameter_type_list ')'
  190                           | direct_abstract_declarator '(' ')'
  191                           | direct_abstract_declarator '(' parameter_type_list ')'

  192 initializer: assignment_expression
  193            | '{' initializer_list '}'
  194            | '{' initializer_list ',' '}'
  195            | NEW class_name '(' argument_expression_list ')'
  196            | NEW class_name '(' ')'

  197 initializer_list: initializer
  198                 | initializer_list ',' initializer

  199 statement: labeled_statement
  200          | compound_statement
  201          | expression_statement
  202          | selection_statement
  203          | iteration_statement
  204          | jump_statement
  205          | delete_statement

  206 delete_statement: DELETE IDENTIFIER
  207                 | DELETE '[' ']' IDENTIFIER

  208 labeled_statement: IDENTIFIER ':' statement
  209                  | CASE constant_expression ':' statement
  210                  | DEFAULT ':' statement

  211 compound_statement: '{' '}'
  212                   | '{' statement_list '}'
  213                   | '{' declaration_list '}'
  214                   | '{' declaration_list statement_list '}'

  215 declaration_list: declaration
  216                 | declaration_list declaration

  217 statement_list: statement
  218               | statement_list statement

  219 expression_statement: ';'
  220                     | expression ';'

  221 selection_statement: IF '(' expression ')' m statement
  222                    | IF '(' expression ')' statement ELSE statement
  223                    | SWITCH '(' expression ')' statement

  224 iteration_statement: WHILE '(' expression ')' statement
  225                    | UNTIL '(' expression ')' statement
  226                    | DO statement WHILE '(' expression ')' ';'
  227                    | FOR '(' expression_statement expression_statement ')' statement
  228                    | FOR '(' expression_statement expression_statement expression ')' statement

  229 jump_statement: GOTO IDENTIFIER ';'
  230               | CONTINUE ';'
  231               | BREAK ';'
  232               | RETURN ';'
  233               | RETURN initializer ';'

  234 translation_unit: external_declaration
  235                 | translation_unit external_declaration

  236 external_declaration: function_definition
  237                     | declaration

  238 function_declaration: declaration_specifiers declarator

  239 function_definition: function_declaration compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 32
    '%' (37) 38
    '&' (38) 27 54
    '(' (40) 7 13 14 26 34 144 145 162 165 166 183 188 189 190 191 195 196 221 222 223 224 225 226 227 228
    ')' (41) 7 13 14 26 34 144 145 162 165 166 183 188 189 190 191 195 196 221 222 223 224 225 226 227 228
    '*' (42) 28 36 167 168 169 170
    '+' (43) 29 40
    ',' (44) 20 79 90 126 133 154 174 176 194 198
    '-' (45) 30 41
    '.' (46) 15
    '/' (47) 37
    ':' (58) 64 131 146 208 209 210
    ';' (59) 81 82 120 150 219 220 226 229 230 231 232 233
    '<' (60) 46
    '=' (61) 67 92 156
    '>' (62) 47
    '?' (63) 64
    '[' (91) 12 163 164 184 185 186 187 207
    ']' (93) 12 163 164 184 185 186 187 207
    '^' (94) 56
    '{' (123) 110 112 139 140 151 193 194 211 212 213 214
    '|' (124) 58
    '}' (125) 110 112 139 140 151 193 194 211 212 213 214
    '~' (126) 31
    error (256)
    IDENTIFIER <str> (258) 1 10 15 16 111 113 114 115 134 135 141 151 152 155 156 161 206 207 208 229
    CONSTANT <str> (259) 2
    STRING_LITERAL <str> (260) 3
    CONST_FLOAT <str> (261) 5
    CONST_CHAR <str> (262) 4
    CONST_EXP <str> (263) 6
    SIZEOF (264) 25 26
    PTR_OP (265) 16
    INC_OP (266) 17 22
    DEC_OP (267) 18 23
    LEFT_OP (268) 43
    RIGHT_OP (269) 44
    LE_OP (270) 48
    GE_OP (271) 49
    EQ_OP (272) 51
    NE_OP (273) 52
    AND_OP (274) 60
    OR_OP (275) 62
    MUL_ASSIGN (276) 68
    DIV_ASSIGN (277) 69
    MOD_ASSIGN (278) 70
    ADD_ASSIGN (279) 71
    SUB_ASSIGN (280) 72
    LEFT_ASSIGN (281) 73
    RIGHT_ASSIGN (282) 74
    AND_ASSIGN (283) 75
    XOR_ASSIGN (284) 76
    OR_ASSIGN (285) 77
    TYPE_NAME (286)
    TYPEDEF (287)
    EXTERN (288) 94
    STATIC (289) 95
    AUTO (290) 96
    REGISTER (291) 97
    CHAR (292) 99
    SHORT (293) 100
    INT (294) 101
    LONG (295) 102
    SIGNED (296) 105
    UNSIGNED (297) 106
    FLOAT (298) 103
    DOUBLE (299) 104
    CONST (300) 157
    VOLATILE (301) 158
    VOID (302) 98
    STRUCT (303) 116
    UNION (304) 117
    ENUM (305) 151 152
    ELLIPSIS (306) 174
    NULL_TOKEN (307) 8
    CASE (308) 209
    DEFAULT (309) 210
    IF (310) 221 222
    ELSE (311) 222
    SWITCH (312) 223
    WHILE (313) 224 226
    DO (314) 226
    FOR (315) 227 228
    GOTO (316) 229
    CONTINUE (317) 230
    BREAK (318) 231
    RETURN (319) 232 233
    CLASS (320) 128 129 130
    DELETE (321) 206 207
    NEW (322) 195 196
    PRIVATE (323) 137
    PUBLIC (324) 136
    PROTECTED (325) 138
    THIS (326)
    UNTIL (327) 225
    BOOL (328)
    TRUE (329)
    FALSE (330)


Nonterminals, with rules where they appear

    $accept (100)
        on left: 0
    primary_expression <typ> (101)
        on left: 1 2 3 4 5 6 7 8
        on right: 11
    m <int_value> (102)
        on left: 9
        on right: 60 62 221
    class_name <str> (103)
        on left: 10 141
        on right: 128 129 130 144 145 195 196
    postfix_expression <typ> (104)
        on left: 11 12 13 14 15 16 17 18
        on right: 12 13 14 15 16 17 18 21
    argument_expression_list <arg_ex_list> (105)
        on left: 19 20
        on right: 14 20 195
    unary_expression <typ> (106)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 66
    unary_operator <str> (107)
        on left: 27 28 29 30 31 32
        on right: 24
    cast_expression <typ> (108)
        on left: 33 34
        on right: 24 34 35 36 37 38
    multiplicative_expression <typ> (109)
        on left: 35 36 37 38
        on right: 36 37 38 39 40 41
    additive_expression <typ> (110)
        on left: 39 40 41
        on right: 40 41 42 43 44
    shift_expression <typ> (111)
        on left: 42 43 44
        on right: 43 44 45 46 47 48 49
    relational_expression <typ> (112)
        on left: 45 46 47 48 49
        on right: 46 47 48 49 50 51 52
    equality_expression <typ> (113)
        on left: 50 51 52
        on right: 51 52 53 54
    and_expression <typ> (114)
        on left: 53 54
        on right: 54 55 56
    exclusive_or_expression <typ> (115)
        on left: 55 56
        on right: 56 57 58
    inclusive_or_expression <typ> (116)
        on left: 57 58
        on right: 58 59 60
    logical_and_expression <typ> (117)
        on left: 59 60
        on right: 60 61 62
    logical_or_expression <typ> (118)
        on left: 61 62
        on right: 62 63 64
    conditional_expression <typ> (119)
        on left: 63 64
        on right: 64 65 80
    assignment_expression <typ> (120)
        on left: 65 66
        on right: 19 20 66 78 79 192
    assignment_operator <str> (121)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 66
    expression <typ> (122)
        on left: 78 79
        on right: 7 12 64 79 220 221 222 223 224 225 226 228
    constant_expression <typ> (123)
        on left: 80
        on right: 156 163 185 187 209
    declaration <declaration> (124)
        on left: 81 82
        on right: 215 216 237
    declaration_specifiers <dec_spec> (125)
        on left: 83 84 85 86 87 88
        on right: 81 82 84 86 88 177 238
    init_declarator_list <init_dec_list> (126)
        on left: 89 90
        on right: 82 90
    init_declarator <dec> (127)
        on left: 91 92
        on right: 89 90
    storage_class_specifier <str> (128)
        on left: 93 94 95 96 97
        on right: 83 84
    type_specifier <type_spec> (129)
        on left: 98 99 100 101 102 103 104 105 106 107 108 109
        on right: 85 86 121 122
    struct_or_union_specifier <str_union> (130)
        on left: 110 111 112 113
        on right: 107
    struct_id <str> (131)
        on left: 114
        on right: 110
    union_id <str> (132)
        on left: 115
        on right: 112
    struct <str> (133)
        on left: 116
        on right: 110 111
    union <str> (134)
        on left: 117
        on right: 112 113
    struct_declaration_list <struc_dec_list> (135)
        on left: 118 119
        on right: 110 112 119
    struct_declaration <struc_dec> (136)
        on left: 120
        on right: 118 119
    specifier_qualifier_list <sql> (137)
        on left: 121 122 123 124
        on right: 120 121 123 150 178 179
    struct_declarator_list <sdl> (138)
        on left: 125 126
        on right: 120 126
    struct_declarator <sd> (139)
        on left: 127
        on right: 125 126
    class_specifier <class_spec> (140)
        on left: 128 129 130
        on right: 108
    inheritance_specifier <inh_spec> (141)
        on left: 131
        on right: 129
    base_class_list <bcl> (142)
        on left: 132 133
        on right: 131 133
    base_class <bc> (143)
        on left: 134 135
        on right: 132 133
    access_specifier <str> (144)
        on left: 136 137 138
        on right: 134 146
    class_body <class_mem_dec_list> (145)
        on left: 139 140
        on right: 128 129
    class_member_declaration_list <class_mem_dec_list> (146)
        on left: 142 143
        on right: 139 143
    constructor_declaration <constrdec> (147)
        on left: 144 145
        on right: 148
    class_member_declaration <class_mem_dec> (148)
        on left: 146 147 148
        on right: 142 143
    member_declaration <memd> (149)
        on left: 149 150
        on right: 147
    enum_specifier <enum_spec> (150)
        on left: 151 152
        on right: 109
    enumerator_list <enuml> (151)
        on left: 153 154
        on right: 151 154
    enumerator <enumer> (152)
        on left: 155 156
        on right: 153 154
    type_qualifier <str> (153)
        on left: 157 158
        on right: 87 88 123 124 171 172
    declarator <dec> (154)
        on left: 159 160
        on right: 91 92 127 150 162 177 238
    direct_declarator <dir_dec> (155)
        on left: 161 162 163 164 165 166
        on right: 159 160 163 164 165 166
    pointer <point> (156)
        on left: 167 168 169 170
        on right: 159 169 170 180 182
    type_qualifier_list <tql> (157)
        on left: 171 172
        on right: 168 170 172
    parameter_type_list <pl> (158)
        on left: 173 174
        on right: 165 189 191
    parameter_list <pl> (159)
        on left: 175 176
        on right: 144 173 174 176
    parameter_declaration <par_dec> (160)
        on left: 177
        on right: 175 176
    type_name <ty_nm> (161)
        on left: 178 179
        on right: 26 34
    abstract_declarator <abs_d> (162)
        on left: 180 181 182
        on right: 179 183
    direct_abstract_declarator <dir_ad> (163)
        on left: 183 184 185 186 187 188 189 190 191
        on right: 181 182 186 187 190 191
    initializer <ini> (164)
        on left: 192 193 194 195 196
        on right: 92 197 198 233
    initializer_list <ini_lst> (165)
        on left: 197 198
        on right: 193 194 198
    statement <typ> (166)
        on left: 199 200 201 202 203 204 205
        on right: 208 209 210 217 218 221 222 223 224 225 226 227 228
    delete_statement <typ> (167)
        on left: 206 207
        on right: 205
    labeled_statement <typ> (168)
        on left: 208 209 210
        on right: 199
    compound_statement <comp_stmt> (169)
        on left: 211 212 213 214
        on right: 144 145 200 239
    declaration_list <dec_list> (170)
        on left: 215 216
        on right: 213 214 216
    statement_list <typ> (171)
        on left: 217 218
        on right: 212 214 218
    expression_statement <typ> (172)
        on left: 219 220
        on right: 201 227 228
    selection_statement <typ> (173)
        on left: 221 222 223
        on right: 202
    iteration_statement <typ> (174)
        on left: 224 225 226 227 228
        on right: 203
    jump_statement <typ> (175)
        on left: 229 230 231 232 233
        on right: 204
    translation_unit <node> (176)
        on left: 234 235
        on right: 0 235
    external_declaration <node> (177)
        on left: 236 237
        on right: 234 235
    function_declaration <func_decl> (178)
        on left: 238
        on right: 239
    function_definition <fun_def> (179)
        on left: 239
        on right: 149 236


State 0

    0 $accept: • translation_unit $end

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    AUTO      shift, and go to state 3
    REGISTER  shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    FLOAT     shift, and go to state 11
    DOUBLE    shift, and go to state 12
    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    VOID      shift, and go to state 15
    STRUCT    shift, and go to state 16
    UNION     shift, and go to state 17
    ENUM      shift, and go to state 18
    CLASS     shift, and go to state 19

    EXTERN    [reduce using rule 93 (storage_class_specifier)]
    STATIC    [reduce using rule 93 (storage_class_specifier)]
    AUTO      [reduce using rule 93 (storage_class_specifier)]
    REGISTER  [reduce using rule 93 (storage_class_specifier)]
    CHAR      [reduce using rule 93 (storage_class_specifier)]
    SHORT     [reduce using rule 93 (storage_class_specifier)]
    INT       [reduce using rule 93 (storage_class_specifier)]
    LONG      [reduce using rule 93 (storage_class_specifier)]
    SIGNED    [reduce using rule 93 (storage_class_specifier)]
    UNSIGNED  [reduce using rule 93 (storage_class_specifier)]
    FLOAT     [reduce using rule 93 (storage_class_specifier)]
    DOUBLE    [reduce using rule 93 (storage_class_specifier)]
    CONST     [reduce using rule 93 (storage_class_specifier)]
    VOLATILE  [reduce using rule 93 (storage_class_specifier)]
    VOID      [reduce using rule 93 (storage_class_specifier)]
    STRUCT    [reduce using rule 93 (storage_class_specifier)]
    UNION     [reduce using rule 93 (storage_class_specifier)]
    ENUM      [reduce using rule 93 (storage_class_specifier)]
    CLASS     [reduce using rule 93 (storage_class_specifier)]
    $default  reduce using rule 93 (storage_class_specifier)

    declaration                go to state 20
    declaration_specifiers     go to state 21
    storage_class_specifier    go to state 22
    type_specifier             go to state 23
    struct_or_union_specifier  go to state 24
    struct                     go to state 25
    union                      go to state 26
    class_specifier            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    translation_unit           go to state 30
    external_declaration       go to state 31
    function_declaration       go to state 32
    function_definition        go to state 33


State 1

   94 storage_class_specifier: EXTERN •

    $default  reduce using rule 94 (storage_class_specifier)


State 2

   95 storage_class_specifier: STATIC •

    $default  reduce using rule 95 (storage_class_specifier)


State 3

   96 storage_class_specifier: AUTO •

    $default  reduce using rule 96 (storage_class_specifier)


State 4

   97 storage_class_specifier: REGISTER •

    $default  reduce using rule 97 (storage_class_specifier)


State 5

   99 type_specifier: CHAR •

    $default  reduce using rule 99 (type_specifier)


State 6

  100 type_specifier: SHORT •

    $default  reduce using rule 100 (type_specifier)


State 7

  101 type_specifier: INT •

    $default  reduce using rule 101 (type_specifier)


State 8

  102 type_specifier: LONG •

    $default  reduce using rule 102 (type_specifier)


State 9

  105 type_specifier: SIGNED •

    $default  reduce using rule 105 (type_specifier)


State 10

  106 type_specifier: UNSIGNED •

    $default  reduce using rule 106 (type_specifier)


State 11

  103 type_specifier: FLOAT •

    $default  reduce using rule 103 (type_specifier)


State 12

  104 type_specifier: DOUBLE •

    $default  reduce using rule 104 (type_specifier)


State 13

  157 type_qualifier: CONST •

    $default  reduce using rule 157 (type_qualifier)


State 14

  158 type_qualifier: VOLATILE •

    $default  reduce using rule 158 (type_qualifier)


State 15

   98 type_specifier: VOID •

    $default  reduce using rule 98 (type_specifier)


State 16

  116 struct: STRUCT •

    $default  reduce using rule 116 (struct)


State 17

  117 union: UNION •

    $default  reduce using rule 117 (union)


State 18

  151 enum_specifier: ENUM • IDENTIFIER '{' enumerator_list '}'
  152               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 34


State 19

  128 class_specifier: CLASS • class_name class_body
  129                | CLASS • class_name inheritance_specifier class_body
  130                | CLASS • class_name

    IDENTIFIER  shift, and go to state 35

    class_name  go to state 36


State 20

  237 external_declaration: declaration •

    $default  reduce using rule 237 (external_declaration)


State 21

   81 declaration: declaration_specifiers • ';'
   82            | declaration_specifiers • init_declarator_list ';'
  238 function_declaration: declaration_specifiers • declarator

    IDENTIFIER  shift, and go to state 37
    '('         shift, and go to state 38
    '*'         shift, and go to state 39
    ';'         shift, and go to state 40

    init_declarator_list  go to state 41
    init_declarator       go to state 42
    declarator            go to state 43
    direct_declarator     go to state 44
    pointer               go to state 45


State 22

   83 declaration_specifiers: storage_class_specifier •
   84                       | storage_class_specifier • declaration_specifiers

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    AUTO      shift, and go to state 3
    REGISTER  shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    FLOAT     shift, and go to state 11
    DOUBLE    shift, and go to state 12
    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    VOID      shift, and go to state 15
    STRUCT    shift, and go to state 16
    UNION     shift, and go to state 17
    ENUM      shift, and go to state 18
    CLASS     shift, and go to state 19

    IDENTIFIER  reduce using rule 83 (declaration_specifiers)
    IDENTIFIER  [reduce using rule 93 (storage_class_specifier)]
    EXTERN      [reduce using rule 93 (storage_class_specifier)]
    STATIC      [reduce using rule 93 (storage_class_specifier)]
    AUTO        [reduce using rule 93 (storage_class_specifier)]
    REGISTER    [reduce using rule 93 (storage_class_specifier)]
    CHAR        [reduce using rule 93 (storage_class_specifier)]
    SHORT       [reduce using rule 93 (storage_class_specifier)]
    INT         [reduce using rule 93 (storage_class_specifier)]
    LONG        [reduce using rule 93 (storage_class_specifier)]
    SIGNED      [reduce using rule 93 (storage_class_specifier)]
    UNSIGNED    [reduce using rule 93 (storage_class_specifier)]
    FLOAT       [reduce using rule 93 (storage_class_specifier)]
    DOUBLE      [reduce using rule 93 (storage_class_specifier)]
    CONST       [reduce using rule 93 (storage_class_specifier)]
    VOLATILE    [reduce using rule 93 (storage_class_specifier)]
    VOID        [reduce using rule 93 (storage_class_specifier)]
    STRUCT      [reduce using rule 93 (storage_class_specifier)]
    UNION       [reduce using rule 93 (storage_class_specifier)]
    ENUM        [reduce using rule 93 (storage_class_specifier)]
    CLASS       [reduce using rule 93 (storage_class_specifier)]
    '('         reduce using rule 83 (declaration_specifiers)
    '('         [reduce using rule 93 (storage_class_specifier)]
    '*'         reduce using rule 83 (declaration_specifiers)
    '*'         [reduce using rule 93 (storage_class_specifier)]
    ';'         reduce using rule 83 (declaration_specifiers)
    ';'         [reduce using rule 93 (storage_class_specifier)]
    $default    reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 46
    storage_class_specifier    go to state 22
    type_specifier             go to state 23
    struct_or_union_specifier  go to state 24
    struct                     go to state 25
    union                      go to state 26
    class_specifier            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29


State 23

   85 declaration_specifiers: type_specifier •
   86                       | type_specifier • declaration_specifiers

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    AUTO      shift, and go to state 3
    REGISTER  shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    FLOAT     shift, and go to state 11
    DOUBLE    shift, and go to state 12
    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    VOID      shift, and go to state 15
    STRUCT    shift, and go to state 16
    UNION     shift, and go to state 17
    ENUM      shift, and go to state 18
    CLASS     shift, and go to state 19

    IDENTIFIER  reduce using rule 85 (declaration_specifiers)
    IDENTIFIER  [reduce using rule 93 (storage_class_specifier)]
    EXTERN      [reduce using rule 93 (storage_class_specifier)]
    STATIC      [reduce using rule 93 (storage_class_specifier)]
    AUTO        [reduce using rule 93 (storage_class_specifier)]
    REGISTER    [reduce using rule 93 (storage_class_specifier)]
    CHAR        [reduce using rule 93 (storage_class_specifier)]
    SHORT       [reduce using rule 93 (storage_class_specifier)]
    INT         [reduce using rule 93 (storage_class_specifier)]
    LONG        [reduce using rule 93 (storage_class_specifier)]
    SIGNED      [reduce using rule 93 (storage_class_specifier)]
    UNSIGNED    [reduce using rule 93 (storage_class_specifier)]
    FLOAT       [reduce using rule 93 (storage_class_specifier)]
    DOUBLE      [reduce using rule 93 (storage_class_specifier)]
    CONST       [reduce using rule 93 (storage_class_specifier)]
    VOLATILE    [reduce using rule 93 (storage_class_specifier)]
    VOID        [reduce using rule 93 (storage_class_specifier)]
    STRUCT      [reduce using rule 93 (storage_class_specifier)]
    UNION       [reduce using rule 93 (storage_class_specifier)]
    ENUM        [reduce using rule 93 (storage_class_specifier)]
    CLASS       [reduce using rule 93 (storage_class_specifier)]
    '('         reduce using rule 85 (declaration_specifiers)
    '('         [reduce using rule 93 (storage_class_specifier)]
    '*'         reduce using rule 85 (declaration_specifiers)
    '*'         [reduce using rule 93 (storage_class_specifier)]
    ';'         reduce using rule 85 (declaration_specifiers)
    ';'         [reduce using rule 93 (storage_class_specifier)]
    $default    reduce using rule 85 (declaration_specifiers)

    declaration_specifiers     go to state 47
    storage_class_specifier    go to state 22
    type_specifier             go to state 23
    struct_or_union_specifier  go to state 24
    struct                     go to state 25
    union                      go to state 26
    class_specifier            go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29


State 24

  107 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 107 (type_specifier)


State 25

  110 struct_or_union_specifier: struct • struct_id '{' struct_declaration_list '}'
  111                          | struct • IDENTIFIER

    IDENTIFIER  shift, and go to state 48

    struct_id  go to state 49


State 26

  112 struct_or_union_specifier: union • union_id '{' struct_declaration_list '}'
  113                          | union • IDENTIFIER

    IDENTIFIER  shift, and go to state 50

    union_id  go to state 51


State 27

  108 type_specifier: class_specifier •

    $default  reduce using rule 108 (type_specifier)


State 28

  109 type_specifier: enum_specifier •

    $default  reduce using rule 109 (type_specifier)


State 29

   87 declaration_specifiers: type_qualifier •
   88                       | type_qualifier • declaration_specifiers

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    AUTO      shift, and go to state 3
    REGISTER  shift, and go to state 4
    CHAR      shift, and go to state 5
    SHORT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNSIGNED  shift, and go to state 10
    FLOAT     shift, and go to state 11
    DOUBLE    shift, and go to state 12
    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    VOID      shift, and go to state 15
    STRUCT    shift, and go to state 16
    UNION     shift, and go to state 17
    ENUM      shift, and go to state 18
    CLASS     shift, and go to state 19
